# blue-ovals-server

./: .gitignore  Cargo.toml
src/: build.rs  main.rs  server.proto
