[package]
name = "blue-ovals-server"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
futures = "0.3.28"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0", features = ["rt", "macros"]}
urlencoding = "2.1.3"
uuid = {version = "1.4.1", features = ["v4"]}
warp = {version = "0.3.5", features = ["tls"]}
prost = "0.12"

[build-dependencies]
prost-build = "0.12.1"
